@@ -1,3 +1,6 @@
+2012-12-01 Molnar Karoly <molnarkaroly@users.sf.net>
+	* tools/device-manager.pl: Synchronization with the modified gpprocessor.c.
+
 2012-10-14 Molnar Karoly <molnarkaroly@users.sf.net>
         * tools/device-help.pl: The footer of each page included
           the creation date.
